--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,15 +40,6 @@ jobs:
             echo "Installing dependencies..."
             composer install --no-interaction --prefer-dist --optimize-autoloader
 
-            echo "Running database migrations..."
-            php artisan migrate --force
-
-            echo "Caching Laravel config/routes/views..."
-            php artisan config:cache
-            php artisan route:cache
-            php artisan view:cache
-
-            echo "Creating storage symlink if not exists..."
-            if [ ! -L public/storage ]; then
-              php artisan storage:link
-            fi
+            echo "Deployment complete."
+EOF
+            
